# AndroidVideoPlayer

./: .gitignore  build.gradle  gradle.properties  settings.gradle  todo.txt  versions.gradle  功能清单.md
Common/: build.gradle
Common/src/main/: AndroidManifest.xml
Common/src/main/res/anim/: action_bottom_enter.xml  action_bottom_exit.xml  action_left_enter.xml  action_left_exit.xml  action_rigth_enter.xml  action_rigth_exit.xml  action_silence.xml
Common/src/main/res/layout/: common_easy_widget_title_bar.xml  common_layout_status_empty.xml  common_layout_status_error.xml  common_layout_status_loading.xml
Common/src/main/res/values/: attrs.xml  colors.xml  ids.xml  styles.xml
DemoCommom/: build.gradle
DemoCommom/src/androidTest/java/com/caldremch/democommom/: ExampleInstrumentedTest.kt
DemoCommom/src/main/: AndroidManifest.xml
DemoCommom/src/main/java/com/caldremch/democommom/: DemoCommonApp.kt  DownLoadActivity.java  MainActivity.kt  NetStateActivity.java
DemoCommom/src/main/res/layout/: activity_annotation.xml  activity_download.xml  activity_empty.xml  activity_input.xml  activity_like_anim.xml  activity_login3.xml  activity_main.xml  activity_netstate.xml  activity_round_layout.xml  activity_smoothrecyclerview.xml  footer_view.xml  item_smooth.xml  pop_demo.xml  widget_activity.xml
DemoCommom/src/main/res/layout-land/: activity_main.xml
DemoCommom/src/main/res/values/: strings.xml  style.xml
DemoCommom/src/test/java/com/caldremch/democommom/: ExampleUnitTest.kt
FFmpegCore/: CMakeLists.txt  build.gradle
FFmpegCore/src/main/: AndroidManifest.xml
FFmpegCore/src/main/cpp/: FFmpegCore.cpp  FFmpegCore.h  VideoManager.cpp  VideoManager.h  android_log.h  base_include.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg_opt.c
FFmpegCore/src/main/cpp/ffmpeg/: base_include.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c
FFmpegCore/src/main/cpp/include/: config.h
FFmpegCore/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  dv_profile.h  mediacodec.h  qsv.h  vaapi.h  vda.h  vdpau.h  version.h  videotoolbox.h  xvmc.h
FFmpegCore/src/main/cpp/include/libavfilter/: avfilter.h  avfiltergraph.h  version.h
FFmpegCore/src/main/cpp/include/libavformat/: avformat.h  avio.h  ffm.h  network.h  os_support.h  url.h  version.h
FFmpegCore/src/main/cpp/include/libavresample/: version.h
FFmpegCore/src/main/cpp/include/libavutil/: avconfig.h  bswap.h  common.h  ffversion.h  hwcontext.h  hwcontext_vaapi.h  imgutils.h  internal.h  intreadwrite.h  pixfmt.h  spherical.h  timer.h  version.h
FFmpegCore/src/main/cpp/include/libswscale/: swscale.h
FFmpegCore/src/main/cpp/myjnihelper/: MutexLock.cpp  MutexLock.h
FFmpegCore/src/main/cpp/utils/: ffmpeg_core_utils.c  ffmpeg_core_utils.h
FFmpegCore/src/main/java/com/caldremch/ffmpegcore/: FFmpegCore.java
FFmpegCore/src/main/java/com/caldremch/ffmpegcore/utils/: FileUtils.java  VedioEditUtils.java
FFmpegCore/src/main/res/values/: strings.xml
PlayerCore/: build.gradle
PlayerCore/src/main/: AndroidManifest.xml
PlayerCore/src/main/res/layout/: user_control.xml
PlayerCore/src/main/res/values/: ids.xml  strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/caldremch/androidvideoplayer/: App.java  Constant.java  FFmpegMainActivity.java  FFmpegMainActivity.kt  MainActivity.java  MainActivity.kt
app/src/main/res/drawable/: ic_switch.xml
app/src/main/res/layout/: activity_base_test_list.xml  activity_camera.xml  activity_camera1.xml  activity_ffmpeg_main.xml  activity_main.xml  activity_player_demo.xml  activity_record.xml  activity_temp_test.xml  activity_video_demo.xml  camera_control.xml  ffmpeg_test_item.xml  list_test_item.xml  single_playerview.xml  video_list_item.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
http/: build.gradle
http/src/androidTest/java/com/caldremch/http/: ExampleInstrumentedTest.java
http/src/main/: AndroidManifest.xml
(+122 files in other folders)
